--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 
               <div class="column">
 
-                <a href="/image/<%= image._id %>.png"> <img src="<%= image.path %>.png" class="responsive-img" alt="<%= image.name %>"> </a>
+                <a href="/image/<%= image._id %>"> <img src="<%= image.path %>" class="responsive-img" alt="<%= image.name %>"> </a>
               </div>
             <% }); %>  
           </div>
